--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <div class="m-t">
                                 <div class="form-group">
                                     <label><strong>Folio digital:</strong></label>
-                                    <input type="text" class="form-control" placeholder="xxxxxxxx-xxxx-xxx-xxxx-xxxxxxxxxxx" name="guid" value="" autofocus>
+                                    <input type="text" class="form-control" placeholder="xxxxxxxx-xxxx-xxx-xxxx-xxxxxxxxxxx"  name="guid" value="d8ca4200-7f37-11ef-bf09-2534c8ed8fb6" autofocus>
                                 </div>
                                 <!-- CAPTCHA simulado con palomita SVG -->
                                 <div style="width: 304px; padding: 10px; border: 1px solid #d3d3d3; border-radius: 4px; background-color: #f9f9f9; position: relative;">
